external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/commentInScript.scxml.errors
:/tst_parser/data/commentInScript.scxml:6:0: error: Error parsing SCXML file: Premature end of document.
