external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/commentInScript.scxml
<?xml version="1.0" encoding="UTF-8"?>
<scxml
    xmlns="http://www.w3.org/2005/07/scxml"
    version="1.0"
>
    <script><!--
        function isValidMedia() {
            var m = _event.data.media
            return (m + "").length > 0
        }
    <initial>
</scxml>
